--- a/pustovalova_matrix_try2.ipynb
+++ b/pustovalova_matrix_try2.ipynb
@@ -16,7 +16,7 @@
    "id": "13006bc2",
    "metadata": {},
    "source": [
-    "# Защита персональных данных клиентов ee"
+    "# Защита персональных данных клиентов ee ficha"
    ]
   },
   {
