time series project rename and add tscv

--- a/Time Series Project.ipynb
+++ b/Time Series Project.ipynb
@@ -97,7 +97,8 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import TimeSeriesSplit"
    ]
   },
   {
@@ -636,13 +637,14 @@
    "outputs": [],
    "source": [
     "# gridsearch с таймингом с вариантом рандомного или точного поиска\n",
+    "tscv = TimeSeriesSplit(n_splits = 10)\n",
     "def gs_model(model, param_grid, X, y):\n",
     "    gs = GridSearchCV(\n",
     "        model,\n",
     "        param_grid = param_grid,\n",
     "        scoring='neg_root_mean_squared_error',\n",
     "        n_jobs=16,\n",
-    "        cv=[(slice(None), slice(None))] # отключим кросс-валидацию для гридсерч так как мы исследуем временные ряды\n",
+    "        cv=tscv # отключим кросс-валидацию для гридсерч так как мы исследуем временные ряды\n",
     "    )\n",
     "    gs.fit(X, y)\n",
     "    # лучшее значение RMSE на кросс-валидации\n",
